--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,24 @@
 server:
   port: 8080
 spring:
+  redis:
+    host: 192.168.85.133
+  #Redis服务器连接端口
+    port: 6379
+  #Redis数据库索引（默认为0）
+    databas: 0
+  #连接超时时间（毫秒）
+    timeout: 1800000
+  #连接池最大连接数（使用负值表示没有限制）
+    lettuce.pool.max-active: 20
+  #最大阻塞等待时间(负数表示没限制)
+    lettuce.pool.max-wait: -1
+  #连接池中的最大空闲连接
+    lettuce.pool.max-idle: 5
+  #连接池中的最小空闲连接
+    lettuce.pool.min-idle: 0
+
+
   application:
     #应用的名称，可选
     name: reggie_take_out
@@ -20,3 +38,6 @@ mybatis-plus:
       id-type: ASSIGN_ID
 reggie:
   path: D:\java\reggie_take_out\image\
+
+
+
